--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.40",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
